test/syntax-errors/missing-rparen-in-fncall-nested/missing-rparen-in-fncall-nested.foster
main = fn () {
  expect_i1(false);
  // ANTLR wants to delete the "extraneous" token 42, rather than
  // the correct but hard-to-generate insertion of '('.
  print_i1(__COMPILES__ print_i32 42));
}
